[project.urls]
Homepage = "https://github.com/Omer-Dagry/RabbitMQUtils"
Issues = "https://github.com/Omer-Dagry/RabbitMQUtils/issues"

[project]
name = "rabbitmq_utils"
version = "0.0.1"
description = "A package for communicating with RabbitMQ"
keywords = ["rabbitmq", "pika", "aio", "async"]

readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Omer Dagry", email = "omerdagry@gmail.com" },
]

requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aio-pika==9.*",
]

[tool.setuptools.packages.find]
where = ["rabbitmq_utils"]
include = ["*"]
exclude = []
namespaces = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
